--- a/fe/src/app/sections/sections.component.html
+++ b/fe/src/app/sections/sections.component.html
@@ -21,18 +21,20 @@
     <div class="row justify-content-between align-items-center">
       <div class="col-lg-5 mb-5 mb-lg-0">
         <h1 class="text-white font-weight-light">Bootstrap carousel</h1>
-        <p class="lead text-white mt-4">Argon Design System comes with four pre-built pages to help you get started faster. You can change the text and images and you're good to go.</p>
-        <a href="https://demos.creative-tim.com/argon-design-system-angular/documentation/alerts?ref=adsa-bootstrap-carousel" class="btn btn-white mt-4">See all components</a>
+        <p class="lead text-white mt-4">Argon Design System comes with four pre-built pages to help you get started
+          faster. You can change the text and images and you're good to go.</p>
+        <a href="https://demos.creative-tim.com/argon-design-system-angular/documentation/alerts?ref=adsa-bootstrap-carousel"
+          class="btn btn-white mt-4">See all components</a>
       </div>
       <div class="col-lg-6 mb-lg-auto">
         <div class="rounded shadow-lg overflow-hidden transform-perspective-right bootstrap-slider">
           <ngb-carousel>
-              <ng-template ngbSlide>
-                <img class="img-fluid" src="assets/img/theme/img-1-1200x1000.jpg" alt="First slide">
-              </ng-template>
-              <ng-template ngbSlide>
-                <img class="img-fluid" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide">
-              </ng-template>
+            <ng-template ngbSlide>
+              <img class="img-fluid" src="assets/img/theme/img-1-1200x1000.jpg" alt="First slide">
+            </ng-template>
+            <ng-template ngbSlide>
+              <img class="img-fluid" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide">
+            </ng-template>
           </ngb-carousel>
         </div>
       </div>
@@ -63,7 +65,9 @@
         <h3 class="display-3 text-white">A beautiful Design System
           <span class="text-white">completed with examples</span>
         </h3>
-        <p class="lead text-white">The Design System comes with four pre-built pages to help you get started faster. You can change the text and images and you're good to go. More importantly, looking at them will give you a picture of what you can built with this powerful Bootstrap 4 Design System.</p>
+        <p class="lead text-white">The Design System comes with four pre-built pages to help you get started faster. You
+          can change the text and images and you're good to go. More importantly, looking at them will give you a
+          picture of what you can built with this powerful Bootstrap 4 Design System.</p>
         <div class="btn-wrapper">
           <a [routerLink]="['/login']" class="btn btn-success">Login Page</a>
           <a [routerLink]="['/register']" class="btn btn-white">Register Page</a>
@@ -101,7 +105,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="email" (focus)="focus=true" (blur)="focus=false">
+                    <input class="form-control" placeholder="Email" type="email" (focus)="focus=true"
+                      (blur)="focus=false">
                   </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
@@ -109,7 +114,8 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false">
+                    <input class="form-control" placeholder="Password" type="password" (focus)="focus1=true"
+                      (blur)="focus1=false">
                   </div>
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
