--- a/fe/src/app/home/home.component.html
+++ b/fe/src/app/home/home.component.html
@@ -20,13 +20,16 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
               <img src="./assets/img/brand/argon-white.png" style="width: 200px;" class="img-fluid">
-              <p class="lead text-white">A beautiful Design System for Bootstrap 4 and Angular 13. It's Free and Open Source.</p>
+              <p class="lead text-white">A beautiful Design System for Bootstrap 4 and Angular 13. It's Free and Open
+                Source.</p>
               <div class="btn-wrapper mt-5">
-                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-index-header" class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
+                <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-index-header"
+                  class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                   <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
                   <span class="btn-inner--text">Download Angular</span>
                 </a>
-                <a href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-index-header" class="btn btn-lg btn-github btn-icon mb-3 mb-sm-0" target="_blank">
+                <a href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-index-header"
+                  class="btn btn-lg btn-github btn-icon mb-3 mb-sm-0" target="_blank">
                   <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
                   <span class="btn-inner--text">
                     <span class="text-warning">Star us</span> on Github</span>
@@ -42,7 +45,8 @@
       </div>
       <!-- SVG separator -->
       <div class="separator separator-bottom separator-skew zindex-100">
-        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+        <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1"
+          xmlns="http://www.w3.org/2000/svg">
           <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
         </svg>
       </div>
