--- a/fe/src/app/home/home.component.html
+++ b/fe/src/app/home/home.component.html
@@ -20,24 +20,18 @@
           <div class="row align-items-center justify-content-center">
             <div class="col-lg-6 text-center">
               <img src="./assets/img/brand/argon-white.png" style="width: 200px;" class="img-fluid">
-              <p class="lead text-white">A beautiful Design System for Bootstrap 4 and Angular 13. It's Free and Open
-                Source.</p>
+              <p class="lead text-white">Chúng tôi luôn tự hào là nhà cung cấp dịch vụ dọn dẹp tốt và tối ưu nhất</p>
               <div class="btn-wrapper mt-5">
                 <a href="https://www.creative-tim.com/product/argon-design-system-angular?ref=adsa-index-header"
                   class="btn btn-lg btn-white btn-icon mb-3 mb-sm-0">
                   <span class="btn-inner--icon"><i class="ni ni-cloud-download-95"></i></span>
-                  <span class="btn-inner--text">Download Angular</span>
+                  <span class="btn-inner--text">Trải nghiệm ngay</span>
                 </a>
-                <a href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-index-header"
-                  class="btn btn-lg btn-github btn-icon mb-3 mb-sm-0" target="_blank">
+                <!-- <a href="https://github.com/creativetimofficial/argon-design-system-angular?ref=adsa-index-header" class="btn btn-lg btn-github btn-icon mb-3 mb-sm-0" target="_blank">
                   <span class="btn-inner--icon"><i class="fa fa-github"></i></span>
                   <span class="btn-inner--text">
                     <span class="text-warning">Star us</span> on Github</span>
-                </a>
-              </div>
-              <div class="mt-5">
-                <small class="text-white font-weight-bold mb-0 mr-2">*proudly coded by</small>
-                <img src="./assets/img/brand/creativetim-white-slim.png" style="height: 28px;">
+                </a> -->
               </div>
             </div>
           </div>
