--- a/fe/src/app/sections/buttons-section/buttons-section.component.html
+++ b/fe/src/app/sections/buttons-section/buttons-section.component.html
@@ -1,59 +1,273 @@
 <section class="section section-components pb-0" id="section-components">
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-lg-12">
-        <!-- Basic elements -->
-        <h2 class="mb-5">
-          <span>Basic Elements</span>
-        </h2>
-        <!-- Buttons -->
-        <h3 class="h4 text-success font-weight-bold mb-4">Buttons</h3>
-        <!-- Button styles -->
+    </div>
+  </div>
+</section>
+
+<section class="section pb-0 ">
+  <div class="container">
+    <div class="row row-grid align-items-center">
+      <div class="d-flex px-3" style="color: #000">
         <div>
-          <button class="btn btn-primary" type="button">Button</button>
-          <button class="btn btn-icon btn-3 btn-primary" type="button">
-            <span class="btn-inner--icon"><i class="ni ni-bag-17"></i></span>
-            <span class="btn-inner--text">With icon</span>
-          </button>
-          <button class="btn btn-icon btn-2 btn-primary" type="button">
-            <span class="btn-inner--icon"><i class="ni ni-bag-17"></i></span>
-          </button>
-          <!-- Button wizes -->
-          <div class="mb-3 mt-5">
-            <small class="text-uppercase font-weight-bold">Pick your size</small>
+          <div class="icon icon-lg icon-shape bg-gradient-white shadow rounded-circle text-primary">
+            <i class="ni ni-building text-primary"></i>
           </div>
-          <button class="btn btn-sm btn-primary" type="button">Small</button>
-          <button class="btn btn-1 btn-primary" type="button">Regular</button>
-          <button class="btn btn-lg btn-primary" type="button">Large Button</button>
         </div>
-        <!-- Button colors -->
-        <div class="mb-3 mt-5">
-          <small class="text-uppercase font-weight-bold">Pick your color</small>
+        <div class="pl-4 w-50">
+          <h4 class="display-3">Những dịch vụ tiện ích mà gia đình bạn cần</h4>
+          <p class="">Những dịch vụ bên HSM cung cấp luôn được đưa ra theo cấc tiêu chí cần và đủ dựa trên nhu cầu của
+            từng cá nhân cho tới tập thể.</p>
         </div>
-        <button class="btn btn-1 btn-primary" type="button">Primary</button>
-        <button class="btn btn-1 btn-info" type="button">Info</button>
-        <button class="btn btn-1 btn-success" type="button">Success</button>
-        <button class="btn btn-1 btn-warning" type="button">Warning</button>
-        <button class="btn btn-1 btn-danger" type="button">Danger</button>
-        <button class="btn btn-1 btn-neutral" type="button">Neutral</button>
-        <div class="mb-3 mt-5">
-          <small class="text-uppercase font-weight-bold">Outline</small>
+      </div>
+      <div class="col-md-6 order-lg-2 ml-lg-auto">
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
+                  <i class="ni ni-satisfied"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-success">Dịch vụ vệ sinh</h5>
+                <p>Dịch vụ mang tới tính năng tiện ích nhằm phục vụ nhu cầu vệ sinh
+                  nơi ở, sinh sống và làm việc của người dùng.</p>
+                <a href="javascript:void(0)" class="text-success">Xem thêm</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <button class="btn btn-1 btn-outline-primary" type="button">Outline-primary</button>
-        <button class="btn btn-1 btn-outline-info" type="button">Outline-info</button>
-        <button class="btn btn-1 btn-outline-success" type="button">Outline-success</button>
-        <button class="btn btn-1 btn-outline-warning" type="button">Outline-warning</button>
-        <button class="btn btn-1 btn-outline-danger" type="button">Outline-danger</button>
-        <!-- Button links -->
-        <div class="mb-3 mt-5">
-          <small class="text-uppercase font-weight-bold">Links</small>
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
+                  <i class="ni ni-active-40"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-warning">Giúp việc theo giờ</h5>
+                <p>Dịch vụ giúp việc theo giờ có thể đưa tới cho người dùng đa dạng hơn ở không chỉ khâu dọn dẹp mà còn
+                  là cả dịch vụ khác.</p>
+                <a href="javascript:void(0)" class="text-warning">Xem thêm</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <a href="javascript:void(0)" class="btn btn-link text-default">Default</a>
-        <a href="javascript:void(0)" class="btn btn-link text-primary">Primary</a>
-        <a href="javascript:void(0)" class="btn btn-link text-info">Info</a>
-        <a href="javascript:void(0)" class="btn btn-link text-success">Success</a>
-        <a href="javascript:void(0)" class="btn btn-link text-warning">Warning</a>
-        <a href="javascript:void(0)" class="btn btn-link text-danger">Danger</a>
+      </div>
+      <div class="col-lg-6 order-lg-1">
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-success rounded-circle text-white">
+                  <i class="ni ni-satisfied"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-success">Giúp việc ở lại nhà</h5>
+                <p>Khách hàng có thể thuê những người giúp việc hỗ trợ gia đình. Với thời
+                  gian 24/7 kèm theo đó là thái độ và trình độ chuyên nghiệp.</p>
+                <a href="javascript:void(0)" class="text-success">Xem thêm</a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card shadow shadow-lg--hover mt-5">
+          <div class="card-body">
+            <div class="d-flex px-3">
+              <div>
+                <div class="icon icon-shape bg-gradient-warning rounded-circle text-white">
+                  <i class="ni ni-active-40"></i>
+                </div>
+              </div>
+              <div class="pl-4">
+                <h5 class="title text-warning">Dịch vụ đi chợ thuê</h5>
+                <p>Dịch vụ đem tới tiện ích cho người dùng về việc mua đồ và đi lại vào những thời
+                  điểm bất kỳ trong ngày...</p>
+                <a href="javascript:void(0)" class="text-warning">Xem thêm</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- SVG separator -->
+  <!-- <div class="separator separator-bottom separator-skew zindex-100">
+    <svg x="0" y="0" viewBox="0 0 2560 100" preserveAspectRatio="none" version="1.1" xmlns="http://www.w3.org/2000/svg">
+      <polygon class="fill-white" points="2560 0 2560 100 0 100"></polygon>
+    </svg>
+  </div> -->
+</section>
+<section class="section section-lg">
+  <div class="container">
+    <div class="row mb-lg-5">
+      <div class="col-lg-8">
+        <h2 class="display-3">Luôn đem tới chất lượng hàng đầu</h2>
+        <p class="lead text-muted">Dựa trên các tiêu chí hàng đầu về một dịch vụ, HSM luôn tự tin đem tới cho người dùng
+          những trải nghiệm tốt nhất.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="./assets/img/theme/advance03.png" class="img-center" style="width: 150px;">
+          <div class="pt-4">
+            <h5 class="title">
+              <span class="d-block mb-1">Đa dạng dịch vụ</span>
+              <small class="h6 text-muted">Với nhiều sự lựa chọn và hình thức để sử dụng dịch vụ.
+                HSM luôn sẵn sàng hỗ trợ mọi nhu cầu của khách hàng</small>
+            </h5>
+
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="./assets/img/theme/advance04.png" class="img-center" style="width: 150px;">
+          <div class="pt-4">
+            <h5 class="title">
+              <span class="d-block mb-1">An toàn thông tin</span>
+              <small class="h6 text-muted">Người làm uy tín, luôn có hồ sơ lý lịch rõ ràng
+                và được Công ty giám sát trong suốt quá trình làm việc.</small>
+            </h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="./assets/img/theme/advance02.png" class="img-center" style="width: 150px;">
+          <div class="pt-4">
+            <h5 class="title">
+              <span class="d-block mb-1">Giá cả hợp lý</span>
+              <small class="h6 text-muted">HSM đem tới cho người dùng những dịch vụ có chất lượng tốt đi kèm với
+                giá cả hợp lý đối với từng loại dịch vụ.
+              </small>
+            </h5>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
+        <div class="px-4">
+          <img src="./assets/img/theme/advance01.png" class="img-center" style="width: 150px;">
+          <div class="pt-4">
+            <h5 class="title">
+              <span class="d-block mb-1">Dễ dàng sử dụng</span>
+              <small class="h6 text-muted">Thao tác và lựa chọn hợp lý, tiết kiệm thời gian.</small>
+            </h5>
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section section-lg">
+  <div class="container">
+    <div class="row mb-lg-6">
+      <div class="col-lg-8">
+
+        <h2 class="display-3">Quy trình và Hỗ trợ</h2>
+        <p class="lead text-muted">Dịch vụ, chất lượng và sự tiện ích luôn là 1 khối thống nhất. Quy trình để sử dụng
+          chúng cũng vậy. </p>
+      </div>
+    </div>
+    <div class="row row-grid align-items-center">
+      <div class="col-md-6 order-md-2">
+        <img src="./assets/img/theme/promo-1.png" class="img-fluid floating">
+      </div>
+      <div class="col-md-6 order-md-1">
+        <div class="pr-md-5">
+          <div class="icon icon-lg icon-shape icon-shape-success shadow rounded-circle mb-5">
+            <i class="ni ni-settings-gear-65"></i>
+          </div>
+          <h3>Quy trình dịch vụ</h3>
+          <p>Luôn hướng tới quy trình tối ưu và đạt tới được nhu cầu của khách hàng. Luôn đặt ra với 4 quy trình tương
+            ứng với 4 tiêu chí: tiện, nhanh, an toàn và nhất quán</p>
+          <ul class="list-unstyled mt-5">
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="ni ni-settings-gear-65"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Chọn dịch vụ</h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="ni ni-calendar-grid-58"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Chọn thời gian và địa điểm</h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="ni ni-html5"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Tiến hành dịch vụ</h6>
+                </div>
+              </div>
+            </li>
+            <li class="py-2">
+              <div class="d-flex align-items-center">
+                <div>
+                  <div class="badge badge-circle badge-success mr-3">
+                    <i class="ni ni-satisfied"></i>
+                  </div>
+                </div>
+                <div>
+                  <h6 class="mb-0">Đánh giá và phản hồi dịch vụ</h6>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section bg-secondary">
+  <div class="container">
+    <div class="row row-grid align-items-center">
+      <div class="col-md-6">
+        <div class="card bg-default shadow border-0">
+          <img src="./assets/img/theme/img-1-1200x1000.jpg" class="card-img-top">
+          <blockquote class="card-blockquote">
+            <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
+              <polygon points="0,52 583,95 0,95" class="fill-default" />
+              <polygon points="0,42 583,95 683,0 0,95" opacity=".2" class="fill-default" />
+            </svg>
+            <h4 class="display-3 font-weight-bold text-white">Hệ thống dịch vụ HSM</h4>
+            <p class="lead text-italic text-white">Luôn phát triển và cải thiện. </p>
+          </blockquote>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="pl-md-5">
+          <div class="icon icon-lg icon-shape icon-shape-warning shadow rounded-circle mb-5">
+            <i class="ni ni-settings"></i>
+          </div>
+          <h3>Liên hệ và Hỗ trợ</h3>
+          <p class="lead">Khi có bất kỳ thắc mắc gì về dịch vụ, bạn chỉ cần chạm nhẹ, chúng tôi sẽ giải đáp cho bạn.</p>
+          <p>HSM luôn hướng tới chất lượng sản phẩm, dịch vụ cũng như sự hài lòng của khách hàng</p>
+          <p>Phản hổi và đánh giá của khách hàng luôn là 1 sự đóng góp trong quá trình phát triển của HSM.</p>
+          <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5">Nhận hỗ trợ</a>
+        </div>
       </div>
     </div>
   </div>
