update homepage and footer

--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -113,7 +113,7 @@
     <div class="row">
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="./assets/img/theme/advance03.png" class="img-center" style="width: 150px;">
+          <img src="./assets/img/theme/advance03.png" class="" style="width: 150px;">
           <div class="pt-4">
             <h5 class="title">
               <span class="d-block mb-1">Đa dạng dịch vụ</span>
@@ -126,7 +126,7 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="./assets/img/theme/advance04.png" class="img-center" style="width: 150px;">
+          <img src="./assets/img/theme/advance04.png" class="" style="width: 150px;">
           <div class="pt-4">
             <h5 class="title">
               <span class="d-block mb-1">An toàn thông tin</span>
@@ -138,7 +138,7 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="./assets/img/theme/advance02.png" class="img-center" style="width: 150px;">
+          <img src="./assets/img/theme/advance02.png" class="" style="width: 150px;">
           <div class="pt-4">
             <h5 class="title">
               <span class="d-block mb-1">Giá cả hợp lý</span>
@@ -151,7 +151,7 @@
       </div>
       <div class="col-md-6 col-lg-3 mb-5 mb-lg-0">
         <div class="px-4">
-          <img src="./assets/img/theme/advance01.png" class="img-center" style="width: 150px;">
+          <img src="./assets/img/theme/advance01.png" class="" style="width: 150px;">
           <div class="pt-4">
             <h5 class="title">
               <span class="d-block mb-1">Dễ dàng sử dụng</span>
@@ -176,7 +176,8 @@
     </div>
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-md-2">
-        <img src="./assets/img/theme/promo-1.png" class="img-fluid floating">
+        <img src="./assets/img/theme/servicepick.png" class="img-fluid floating" style="padding-left: 50px; padding-bottom: 30px;">
+        <img src="./assets/img/theme/timepick.png" class="img-fluid floating">
       </div>
       <div class="col-md-6 order-md-1">
         <div class="pr-md-5">
@@ -246,14 +247,12 @@
     <div class="row row-grid align-items-center">
       <div class="col-md-6">
         <div class="card bg-default shadow border-0">
-          <img src="./assets/img/theme/img-1-1200x1000.jpg" class="card-img-top">
-          <blockquote class="card-blockquote">
+          <img src="./assets/img/theme/service.jpeg" class="card-img-top" style="height:400px;">
+          <blockquote class="card-blockquote" style="height:200px;">
             <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
-              <polygon points="0,52 583,95 0,95" class="fill-default" />
-              <polygon points="0,42 583,95 683,0 0,95" opacity=".2" class="fill-default" />
             </svg>
             <h4 class="display-3 font-weight-bold text-white">Hệ thống dịch vụ HSM</h4>
-            <p class="lead text-italic text-white">Luôn phát triển và cải thiện. </p>
+            <p class="lead text-italic text-white">Luôn hướng sự hài lòng của khách hàng đi kèm với sự phát triển và cải thiện dịch vụ. </p>
           </blockquote>
         </div>
       </div>
@@ -263,10 +262,42 @@
             <i class="ni ni-settings"></i>
           </div>
           <h3>Liên hệ và Hỗ trợ</h3>
-          <p class="lead">Khi có bất kỳ thắc mắc gì về dịch vụ, bạn chỉ cần chạm nhẹ, chúng tôi sẽ giải đáp cho bạn.</p>
-          <p>HSM luôn hướng tới chất lượng sản phẩm, dịch vụ cũng như sự hài lòng của khách hàng</p>
+          <p class="lead">Khi có bất kỳ thắc mắc gì về dịch vụ, bạn chỉ cần liên hệ hoặc click vào phần "Hỗ trợ", chúng tôi sẽ giải đáp cho bạn.</p>
           <p>Phản hổi và đánh giá của khách hàng luôn là 1 sự đóng góp trong quá trình phát triển của HSM.</p>
           <a href="javascript:void(0)" class="font-weight-bold text-warning mt-5">Nhận hỗ trợ</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="section section-shaped">
+  <div class="shape shape-style-1 shape-default">
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+  <div class="container py-md">
+    <div class="row justify-content-between align-items-center">
+      <div class="col-lg-5 mb-5 mb-lg-0">
+        <h1 class="text-white font-weight-light">Bạn đã sẵn sàng để
+          trải nghiệm?</h1>
+        <p class="lead text-white mt-4">Đăng ký và trải nghiệm những tính năng thú vị chỉ có trên website HSM</p>
+        <a href=""
+          class="btn btn-white mt-4">Trải nghiệm ngay</a>
+      </div>
+      <div class="col-lg-6 mb-lg-auto">
+        <div class="rounded overflow-hidden bootstrap-slider">
+          <ngb-carousel>
+            <ng-template ngbSlide>
+              <img class="slider-image img-fluid" src="assets/img/theme/servicepick.png" alt="First slide">
+            </ng-template>
+            <ng-template ngbSlide>
+              <img class="slider-image img-fluid" src="assets/img/theme/timepick.png" alt="Second slide">
+            </ng-template>
+          </ngb-carousel>
         </div>
       </div>
     </div>
