--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -270,7 +270,7 @@
     </div>
   </div>
 </section>
-<section class="section section-shaped">
+<section class="section section-shaped" style="padding-top: 2rem; padding-bottom: 2rem;">
   <div class="shape shape-style-1 shape-default">
     <span></span>
     <span></span>
@@ -279,7 +279,7 @@
     <span></span>
     <span></span>
   </div>
-  <div class="container py-md">
+  <div class="container">
     <div class="row justify-content-between align-items-center">
       <div class="col-lg-5 mb-5 mb-lg-0">
         <h1 class="text-white font-weight-light">Bạn đã sẵn sàng để
@@ -296,6 +296,12 @@
             </ng-template>
             <ng-template ngbSlide>
               <img class="slider-image img-fluid" src="assets/img/theme/timepick.png" alt="Second slide">
+            </ng-template>
+            <ng-template ngbSlide>
+              <img class="slider-image img-fluid" src="assets/img/theme/timepick.png" alt="Third slide">
+            </ng-template>
+            <ng-template ngbSlide>
+              <img class="slider-image img-fluid" src="assets/img/theme/timepick.png" alt="Fouth slide">
             </ng-template>
           </ngb-carousel>
         </div>
