--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -164,7 +164,7 @@
     </div>
   </div>
 </section>
-<section class="section section-lg">
+<section class="section section-lg" style="padding-top: 0 !important;">
   <div class="container">
     <div class="row mb-lg-6">
       <div class="col-lg-8">
@@ -177,7 +177,7 @@
     <div class="row row-grid align-items-center">
       <div class="col-md-6 order-md-2">
         <img src="./assets/img/theme/servicepick.png" class="img-fluid floating" style="padding-left: 50px; padding-bottom: 30px;">
-        <img src="./assets/img/theme/timepick.png" class="img-fluid floating">
+        <img src="./assets/img/theme/timepick.png" class="img-fluid floating" style="padding-right: 50px; padding-bottom: 30px;">
       </div>
       <div class="col-md-6 order-md-1">
         <div class="pr-md-5">
@@ -247,12 +247,12 @@
     <div class="row row-grid align-items-center">
       <div class="col-md-6">
         <div class="card bg-default shadow border-0">
-          <img src="./assets/img/theme/service.jpeg" class="card-img-top" style="height:400px;">
-          <blockquote class="card-blockquote" style="height:200px;">
+          <img src="./assets/img/theme/service.jpeg" class="card-img-top" style="height:380px;">
+          <blockquote class="card-blockquote" style="height:175px;">
             <svg preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 583 95" class="svg-bg">
             </svg>
-            <h4 class="display-3 font-weight-bold text-white">Hệ thống dịch vụ HSM</h4>
-            <p class="lead text-italic text-white">Luôn hướng sự hài lòng của khách hàng đi kèm với sự phát triển và cải thiện dịch vụ. </p>
+            <h4 class="font-weight-bold text-white" style="font-size: 24px;">Hệ thống dịch vụ HSM</h4>
+            <p class="text-italic text-white" style="font-size: 16px;">Luôn hướng sự hài lòng của khách hàng đi kèm với sự phát triển và cải thiện dịch vụ. </p>
           </blockquote>
         </div>
       </div>
