--- a/fe/src/app/login/login.component.html
+++ b/fe/src/app/login/login.component.html
@@ -16,14 +16,14 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-white pb-5">
               <div class="text-muted text-center mb-3">
-                <small>Sign in with</small>
+                <small>Đăng nhập bằng</small>
               </div>
               <div class="btn-wrapper text-center">
                 <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
                   <span class="btn-inner--icon">
-                    <img src="./assets/img/icons/common/github.svg">
+                    <img src="./assets/img/icons/common/Facebook.svg">
                   </span>
-                  <span class="btn-inner--text">Github</span>
+                  <span class="btn-inner--text">Facebook</span>
                 </a>
                 <a href="javascript:void(0)" class="btn btn-neutral btn-icon">
                   <span class="btn-inner--icon">
@@ -35,7 +35,7 @@
             </div>
             <div class="card-body px-lg-5 py-lg-5">
               <div class="text-center text-muted mb-4">
-                <small>Or sign in with credentials</small>
+                <small>Hoặc đăng nhập bằng tài khoản</small>
               </div>
               <form role="form">
                 <div class="form-group mb-3" [ngClass]="{'focused':focus===true}">
@@ -43,7 +43,12 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Email" type="email" (focus)="focus=true" (blur)="focus=false">
+                    <input #account id="account" (keypress)="omit_special_char_email($event)"
+                      (blur)="changeHandler('account')" (focus)="focusAccount()" placeholder="name@email.com"
+                      type="text" aria-describedby="email-help" maxlength="50" [(ngModel)]="account_name">
+                  </div>
+                  <div *ngIf="account_name" class="delete" (click)="clearEmail()">
+                    <img style="float: right;" src="assets/img/bnpl/Close.svg" />
                   </div>
                 </div>
                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
@@ -51,17 +56,18 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password" (focus)="focus1=true" (blur)="focus1=false">
+                    <input class="form-control" placeholder="Password" type="password" (blur)="focus1=false"
+                      [(ngModel)]="password">
                   </div>
                 </div>
                 <div class="custom-control custom-control-alternative custom-checkbox">
                   <input class="custom-control-input" id=" customCheckLogin" type="checkbox">
                   <label class="custom-control-label" for=" customCheckLogin">
-                    <span>Remember me</span>
+                    <span>Ghi nhớ</span>
                   </label>
                 </div>
                 <div class="text-center">
-                  <button type="button" class="btn btn-primary my-4">Sign in</button>
+                  <button type="button" class="btn btn-primary my-4" (click)="login()">Đăng nhập</button>
                 </div>
               </form>
             </div>
@@ -69,12 +75,12 @@
           <div class="row mt-3">
             <div class="col-6">
               <a href="javascript:void(0)" class="text-light">
-                <small>Forgot password?</small>
+                <small>Quên mật khẩu?</small>
               </a>
             </div>
             <div class="col-6 text-right">
               <a href="javascript:void(0)" class="text-light">
-                <small>Create new account</small>
+                <small>Tạo tài khoản</small>
               </a>
             </div>
           </div>
