introduction and booking page

--- a/fe/src/app/shared/navbar/navbar.component.html
+++ b/fe/src/app/shared/navbar/navbar.component.html
@@ -32,7 +32,7 @@
             <span class="nav-link-inner--text">Trang chủ</span>
           </a>
           <div class="dropdown-menu">
-            <a [routerLink]="['/landing']" class="dropdown-item">Landing</a>
+            <a [routerLink]="['/introduction']" class="dropdown-item">Introduction</a>
             <a [routerLink]="['/user-profile']" class="dropdown-item">Profile</a>
             <a [routerLink]="['/login']" class="dropdown-item">Login</a>
             <a [routerLink]="['/register']" class="dropdown-item">Register</a>
