--- a/fe/src/app/sections/home-section/home-section.component.html
+++ b/fe/src/app/sections/home-section/home-section.component.html
@@ -290,7 +290,7 @@
       </div>
       <div class="col-lg-6 mb-lg-auto">
         <div class="rounded overflow-hidden bootstrap-slider">
-          <ngb-carousel>
+          <ngb-carousel class="edf">
             <ng-template ngbSlide>
               <img class="slider-image img-fluid" src="assets/img/theme/servicepick.png" alt="First slide">
             </ng-template>
