--- a/fe/src/app/shared/footer/footer.component.html
+++ b/fe/src/app/shared/footer/footer.component.html
@@ -3,8 +3,8 @@
     <div class="row">
       <div class="col-md-6 mb-5 mb-md-0">
         <div class="card card-lift--hover shadow border-0">
-          <a [routerLink]="['/landing']" title="Landing Page">
-            <img src="./assets/img/theme/landing.jpg" class="card-img">
+          <a [routerLink]="['/introduction']" title="Introduction Page">
+            <img src="./assets/img/theme/introduction.jpg" class="card-img">
           </a>
         </div>
       </div>
